Crash pressing Free Light Cache during Indirect Light Cache Baking #57011

Closed
opened 2018-10-02 20:15:19 +02:00 by Duarte Farrajota Ramos · 5 comments

System Information
Windows 7 64 bits, Intel i7 2600, GTX 580 + GTX980ti

Blender Version
Broken: Blender 2.8 60d4d58376

Short description of error
Pressing Free Light Cache button while baking is undergoing crashes Blender

Exact steps for others to reproduce the error

  • Default Blender Cube scene
  • Add a new Irradiance Volume Light Probe to the scene
  • Under the Properties Editor > Render > Indirect Lighting press Bake Indirect Lighting
  • During baking press Free Lighting Cache while it is calculating (you will have to be fast, the default scene renders quickly)

This is probably one of those "Dumb users always finding disapproved workflows that unexpectedly break things" kind of bug.
It likely shouldn't happen often under normal circumstances, probably just a matter of graying out the button or something.

**System Information** Windows 7 64 bits, Intel i7 2600, GTX 580 + GTX980ti **Blender Version** Broken: Blender 2.8 60d4d583760 **Short description of error** Pressing *Free Light Cache* button while baking is undergoing crashes Blender **Exact steps for others to reproduce the error** - Default Blender Cube scene - Add a new *Irradiance Volume Light Probe* to the scene - Under the *Properties Editor > Render > Indirect Lighting* press *Bake Indirect Lighting* - During baking press *Free Lighting Cache* while it is calculating (you will have to be fast, the default scene renders quickly) This is probably one of those "Dumb users always finding disapproved workflows that unexpectedly break things" kind of bug. It likely shouldn't happen often under normal circumstances, probably just a matter of graying out the button or something.

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-10-04 11:14:52 +02:00
Member

Can confirm this.
Potential fix: D3764 (will just kill the bake job prior to freeing)

@fclem: mind having a look?

Can confirm this. Potential fix: [D3764](https://archive.blender.org/developer/D3764) (will just kill the bake job prior to freeing) @fclem: mind having a look?

This issue was referenced by cc92d83d39

This issue was referenced by cc92d83d398854f461fe042959c384306d38320a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57011
No description provided.