Fix T57011: Crash pressing Free Light Cache during Indirect Light Cache Baking

just kill the bake job prior to freeing

Reviewed By: fclem

Differential Revision: https://developer.blender.org/D3764